<resources>
    <string name="get_started">Get started</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login">Log in</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_up">Sign up</string>
    <string name="or">or</string>
    <string name="google">Google</string>
    <string name="join"><u>New here? Join now</u></string>
    <string name="name">Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="create_account">Create an account</string>
    <string name="already_account"><u>Already have an account? Log in</u></string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_choose_profile_pic">Choose profile picture</string>
    <string name="username">Username</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="email">Email</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="header_logo">Header logo</string>
    <string name="app_name">Wardrobe Share</string>
    <string name="find_something_new_to_wear">Find something &quot;new&quot; to wear</string>
    <string name="fashion_bot">Fashion Bot</string>
    <string name="location">Location:</string>
    <string name="contact">Contact:</string>
    <string name="product_image">product image</string>
    <string name="selected_image">Selected Image</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="edit_post">edit post</string>
    <string name="delete_post">delete post</string>
    <string name="description">Description:</string>

</resources>