<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        app:cardBackgroundColor="@color/grey"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        app:strokeWidth="2dp"
        app:strokeColor="@color/black">

        <LinearLayout
            android:background="#E8E4D0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:padding="8dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/sellerPhoto"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/user"
                    app:civ_border_width="2dp"
                    app:civ_border_color="@color/white" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="12dp"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/sellerName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@color/black" />

                </LinearLayout>

                <ImageButton
                    android:id="@+id/editButton"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/ic_edit"
                    android:visibility="gone"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/edit_post"
                    android:padding="12dp" />

                <ImageButton
                    android:id="@+id/deleteButton"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/ic_delete"
                    android:visibility="gone"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/delete_post"
                    android:padding="12dp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/productImage"
                android:contentDescription="@string/product_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/images"
                android:scaleType="centerCrop"
                android:layout_marginVertical="8dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="8dp"
                android:paddingHorizontal="8dp">

                <TextView
                    android:id="@+id/itemDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"

                    android:text="@string/description"
                    android:textColor="@color/black"
                    android:layout_marginTop="4dp" />

                <TextView
                    android:id="@+id/location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:text="@string/location"
                    android:layout_marginTop="4dp" />

                <TextView
                    android:id="@+id/contact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_marginTop="4dp"
                    android:text="@string/contact"/>
            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</layout>

